add code and images

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,7 +1,9 @@
+<!-- Here is the main HTML where handlebars will render to -->
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Eat the Burger!</title>
+	<meta charset="utf-8">
+	<title>Space Burger</title>
 	
 </head>
 <body>
