--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -3,3 +3,30 @@ body {
 	background-repeat: no-repeat;
 
 }
+
+p {
+	color: white;
+}
+#display {
+	color: white;
+}
+
+
+@font-face {
+    font-family: namco;
+    src: url("namco.ttf");
+}
+
+#font {
+	font-family: namco;
+	font-size: 50px;
+	color: #990000;
+
+}
+
+.container {
+	opacity: .80;
+}
+#burg {
+	padding-top: 25px;
+}
